--- a/css/style.css
+++ b/css/style.css
@@ -9,7 +9,7 @@
     padding: 0;
 }
 html{
-    background: #000;
+    background: #fff;
     max-width: 100vw;
     overflow-x: hidden;
 }
@@ -75,6 +75,7 @@ html{
 .container-fluid{
     background: var(--blue-dark);
     padding: 1rem 0.5rem;
+    /* position: sticky; */
 }
 .nav-item a:hover{
     text-shadow: 0 0 0 #000;
