--- a/css/style.css
+++ b/css/style.css
@@ -422,3 +422,10 @@ html{
     visibility: hidden;
     z-index: 0;
 }
+
+/* success.php */
+/* .success-form-div{
+    height: 100vh;
+    width: 100vw;
+    background: #000;
+} */
